@@ -1,0 +1,20 @@
+## CvModFolder
+##
+## Tells BUG where to locate its files when installed in the "Mods" folder.
+##
+## HOW TO USE
+##
+## If you installed BUG into the "Mods" folder, follow these steps.
+##
+## 1. Rename the folder "CustomAssets" to "Assets".
+##
+## 2. Change the text inside the quotes below to match the name of the
+##    folder where BUG is installed, e.g. "BUG Mod 3.5" or "BUG Mod SVN".
+##
+## 3. Copy this file to the folder "Assets/Python".
+##
+## Copyright (c) 2008 The BUG Mod.
+##
+## Author: EmperorFool
+
+modFolder = "BUG Mod"
