@@ -1,0 +1,27 @@
+## CvPathOverride
+##
+## Tells BUG where to locate its files when it cannot find them normally.
+## This is common when using the /AltRoot Civ4 feature or sometimes on
+## non-English operating systems and Windows Vista.
+##
+## HOW TO USE
+##
+## 1. Change the text in the quotes below to match the full path to the
+##    "Beyond the Sword" folder that contains the CivilizationIV.ini file.
+##    Make sure to use forward slashes (/), even for Windows paths.
+##
+##    Windows XP: "C:/Documents and Settings/[UserName]/My Documents/My Games/Beyond the Sword"
+##
+##    Windows Vista: "C:/Users/[UserName]/Documents/My Games/Beyond the Sword"
+##
+##    MacOS: "/home/[UserName]/Documents/Beyond the Sword"
+##
+## 2. Copy this file to the "Python" folder.
+##    When BUG is installed as a mod, the folder is "Assets/Python".
+##    When BUG is installed normally, the folder is "CustomAssets/Python".
+##
+## Copyright (c) 2008 The BUG Mod.
+##
+## Author: EmperorFool
+
+civIniDir = "C:/Documents and Settings/[UserName]/My Documents/My Games/Beyond the Sword"
